--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -188,6 +188,10 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
+
+    // For animated GIF support
+    compile 'com.facebook.fresco:animated-gif:1.+'
+    
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
