--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "react-native": "0.64.0",
     "react-native-device-info": "^8.1.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-qrcode-scanner": "^1.5.4",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.1",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "socket.io-client": "^4.0.1"
+    "socket.io-client": "^4.0.1",
+    "react-native-camera": "2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
