--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-android-sms-listener": "^0.8.0",
     "react-native-camera": "2.0.2",
     "react-native-device-info": "^8.1.2",
     "react-native-gesture-handler": "^1.10.3",
@@ -23,6 +24,7 @@
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.1",
+    "react-native-vector-icons": "^8.1.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "react-navigation-tabs": "^2.11.1",
